--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,8 @@ dependencies:
   screenshot: ^3.0.0
   image: ^4.1.3
   http: ^1.4.0
-  pdf: ^3.10.4
-  printing: ^5.12.0
   path_provider: ^2.1.2
+  flutter_bluetooth_printer: ^2.19.0
 
 
 dev_dependencies:
@@ -30,10 +29,17 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  image_path: "assets/printer.png" 
+  android: true
+  ios: true
+  remove_alpha_ios: true
 
 flutter:
 
   uses-material-design: true
   assets:
   - assets/
-  - assets/QR_Code_Example.png
+  - assets/printer.png
